# fosslight_android_scanner

./: .bumpversion.cfg  .coderabbit.yaml  CHANGELOG.md  MANIFEST.in  README.md  REUSE.toml  fosslight_log_android_240930_1856.txt  fosslight_log_android_240930_1858.txt  fosslight_log_android_240930_1859.txt  fosslight_log_android_240930_1901.txt  fosslight_log_android_240930_1904.txt  fosslight_log_android_241001_2304.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: publish-release.yml  pull-request.yml
.reuse/: dep5
NOTICE_FILES_240930_1710/: libc.a.txt
NOTICE_FILES_240930_1710/system/framework/: ext.jar.txt
NOTICE_FILES_240930_1710/system/lib/: libnl.so.txt
NOTICE_FILES_240930_1856/system/lib/: libcups.so.txt
NOTICE_FILES_240930_1858/: libprotobuf-c-nano-enable_malloc.a.txt
NOTICE_FILES_240930_1858/system/xbin/: nc.txt
NOTICE_FILES_240930_1859/: libipsec.a.txt
NOTICE_FILES_240930_1859/system/lib/: libcamera2ndk.so.txt
NOTICE_FILES_241001_2304/: libadbd.a.txt
doc/: HOW_TO_INSTALL_WITH_LOCAL_FILES.md
script/: copy_notice_files.py  generate-notice-files.py
src/fosslight_android/: _binary_db_controller.py  _common.py  _help.py  _src_analysis.py  _util.py  _write_excel.py  android_binary_analysis.py  check_notice_file.py  check_package_file.py
src/fosslight_android.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: LGE_NOTICE.txt  NOTICE.html  binary.txt  conftest.py  needtoadd-notice.html  pkgConfig.json  test_tox.py
test/pytest/: conftest.py  test_tox.py
(+11 files in other folders)
