# Copyright (c) 2023 LG Electronics Inc.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fosslight_android"
version = "5.0.12"
description = "FOSSLight Android Scanner"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "LG Electronics" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "fosslight_util>=2.1.8",
    "fosslight_source>=2.1.0",
    "fosslight_binary>=5.1.0",
    "beautifulsoup4",
    "lxml>=6.0.1",
    "numpy",
    "pandas",
    "parmap",
    "psycopg2-binary>=2.9.10",
    "python-dateutil",
    "py-tlsh",
    "pytz",
    "six",
    "soupsieve",
    "tqdm",
    "XlsxWriter",
    "PyYAML",
]

[project.urls]
Homepage = "https://github.com/fosslight/fosslight_android_scanner"
Download = "https://github.com/fosslight/fosslight_android_scanner"

[project.scripts]
fosslight_android = "fosslight_android.android_binary_analysis:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
